force-app/main/default/objects/Contact/fields/Additional_Contact_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_Street_Address__c</fullName>
    <label>Additional Contact Street Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>