force-app/main/default/objects/Contact/fields/Additional_Contact_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_Zip_Code__c</fullName>
    <label>Additional Contact Zip Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>