force-app/main/default/objects/Contact/fields/Are_special_accommodations_required__c.field-meta.xml
<CustomField>
    <fullName>Are_special_accommodations_required__c</fullName>
    <label>Are special accommodations required?</label>
    <type>TextArea</type>
</CustomField>