force-app/main/default/objects/Contact/fields/Boards__c.field-meta.xml
<CustomField>
    <fullName>Boards__c</fullName>
    <label>Boards</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOD</fullName>
            </value>
            <value>
                <fullName>WAB</fullName>
            </value>
            <value>
                <fullName>TAB</fullName>
            </value>
            <value>
                <fullName>Federal Advisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>