force-app/main/default/objects/Contact/fields/Business_Contact_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Contact Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contacts (Business Contact Opportunity)</relationshipLabel>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>