force-app/main/default/objects/Contact/fields/Closest_or_preferred_ACE_Location__c.field-meta.xml
<CustomField>
    <fullName>Closest_or_preferred_ACE_Location__c</fullName>
    <label>Closest or preferred ACE Location:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Closest_or_Preferred_ACE_Location</valueSetName>
    </valueSet>
</CustomField>