force-app/main/default/objects/Contact/fields/Country_of_Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Citizenship__c</fullName>
    <label>Country of Citizenship</label>
    <type>TextArea</type>
</CustomField>