force-app/main/default/objects/Contact/fields/Current_Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Employment_Status__c</fullName>
    <label>Current Employment Status:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_Employment_Status</valueSetName>
    </valueSet>
</CustomField>