force-app/main/default/objects/Contact/fields/Emergency_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Phone_Number__c</fullName>
    <label>Emergency Contact Phone Number:</label>
    <type>Phone</type>
</CustomField>