force-app/main/default/objects/Contact/fields/Event_Speaker__c.field-meta.xml
<CustomField>
    <fullName>Event_Speaker__c</fullName>
    <label>Event Speaker</label>
    <type>TextArea</type>
</CustomField>