force-app/main/default/objects/Contact/fields/fw1__Secondary_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>fw1__Secondary_Billing_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Billing Contact</label>
    <type>Checkbox</type>
</CustomField>