force-app/main/default/objects/Contact/fields/Heard_about_IACMI__c.field-meta.xml
<CustomField>
    <fullName>Heard_about_IACMI__c</fullName>
    <label>Heard about IACMI</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Heard_about_IACMI</valueSetName>
    </valueSet>
</CustomField>