force-app/main/default/objects/Contact/fields/How_did_you_hear_about_the_ACE_Bootcamp__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_the_ACE_Bootcamp__c</fullName>
    <label>How did you hear about the ACE Bootcamp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>How_did_you_hear_about_he_ACE_Bootcamp_O</valueSetName>
    </valueSet>
</CustomField>