force-app/main/default/objects/Contact/fields/Interest_in_Workforce_partnership__c.field-meta.xml
<CustomField>
    <fullName>Interest_in_Workforce_partnership__c</fullName>
    <label>Interest in Workforce partnership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>