force-app/main/default/objects/Contact/fields/Internship__c.field-meta.xml
<CustomField>
    <fullName>Internship__c</fullName>
    <label>Internship</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>