force-app/main/default/objects/Contact/fields/Intersted_in_Membership__c.field-meta.xml
<CustomField>
    <fullName>Intersted_in_Membership__c</fullName>
    <label>Intersted in Membership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>