force-app/main/default/objects/Contact/fields/LeadConversionDays__c.field-meta.xml
<CustomField>
    <fullName>LeadConversionDays__c</fullName>
    <formula>IF(
  ISBLANK(pi__created_date__c),
  NULL,
  CreatedDate - pi__created_date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeadConversionDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>