force-app/main/default/objects/Contact/fields/Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State__c</fullName>
    <label>Mailing State:</label>
    <type>TextArea</type>
</CustomField>