force-app/main/default/objects/Contact/fields/Members_Meeting_Attended__c.field-meta.xml
<CustomField>
    <fullName>Members_Meeting_Attended__c</fullName>
    <label>Members Meeting Attended</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Summer 2015</fullName>
            </value>
            <value>
                <fullName>Winter 2016</fullName>
            </value>
            <value>
                <fullName>Summer 2016</fullName>
            </value>
            <value>
                <fullName>Winter 2017</fullName>
            </value>
            <value>
                <fullName>Summer 2017</fullName>
            </value>
            <value>
                <fullName>Winter 2018</fullName>
            </value>
            <value>
                <fullName>Summer 2018</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>