force-app/main/default/objects/Contact/fields/Reserves_or_National_Guard__c.field-meta.xml
<CustomField>
    <fullName>Reserves_or_National_Guard__c</fullName>
    <label>Reserves or National Guard:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reserves_or_National_Guard</valueSetName>
    </valueSet>
</CustomField>