force-app/main/default/objects/Contact/fields/Tech_Area__c.field-meta.xml
<CustomField>
    <fullName>Tech_Area__c</fullName>
    <description>Technical area of interest for a contact.</description>
    <label>Tech Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicles</fullName>
            </value>
            <value>
                <fullName>Wind</fullName>
            </value>
            <value>
                <fullName>Compressed Gas Storage</fullName>
            </value>
            <value>
                <fullName>Materials</fullName>
            </value>
            <value>
                <fullName>Design Modeling and Simulation</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Recycling</fullName>
            </value>
            <value>
                <fullName>Consumer Products</fullName>
            </value>
            <value>
                <fullName>Recreation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>