force-app/main/default/objects/Contact/fields/Technical_Contact__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Technical Contact</label>
    <type>Checkbox</type>
</CustomField>