force-app/main/default/objects/Contact/fields/Technical_Contact_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Contact Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contacts (Technical Contact Opportunity)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>