force-app/main/default/objects/Contact/fields/U_S_Veteran_Status__c.field-meta.xml
<CustomField>
    <fullName>U_S_Veteran_Status__c</fullName>
    <label>U.S. Veteran Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Active Duty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>