force-app/main/default/objects/Contact/fields/Workforce_Project_Number_of_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Project_Number_of_Jobs__c</fullName>
    <label>Workforce - Project Number of Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>