force-app/main/default/objects/Contact/fields/Workforce_Short_Summary__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Short_Summary__c</fullName>
    <label>Workforce - Short Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>