force-app/main/default/objects/Contact/fields/Workshop_Attended__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Attended__c</fullName>
    <description>Workshop attended</description>
    <label>Workshop Attended</label>
    <length>100</length>
    <type>Text</type>
</CustomField>