force-app/main/default/objects/Contact/listViews/HTEC_Confrence_Attendees_2022.listView-meta.xml
<ListView>
    <fullName>HTEC_Confrence_Attendees_2022</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>HTEC Confrence Attendees 2022</value>
    </filters>
    <label>HTEC Confrence Attendees 2022</label>
</ListView>