force-app/main/default/objects/Contact/listViews/New_Member_Forms.listView-meta.xml
<ListView>
    <fullName>New_Member_Forms</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>New Member Forms</label>
</ListView>