force-app/main/default/objects/Contact/listViews/RFI_Campaign_Contacts.listView-meta.xml
<ListView>
    <fullName>RFI_Campaign_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LeadConversionDays__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pi__campaign__c</field>
        <operation>equals</operation>
        <value>RFI</value>
    </filters>
    <label>RFI Campaign Contacts</label>
</ListView>